--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@types/node": "^10.11.7"
   },
   "dependencies": {
+    "cfonts": "^2.4.3",
     "commander": "^2.19.0",
+    "inquirer": "^6.3.1",
     "mkdirp": "^0.5.1"
   }
 }
